fix for bad alignment of proposals filter

--- a/trunk/plugins/themes/collaboratorium-theme/docroot/_diffs/css/moth_additional_styles.css
+++ b/trunk/plugins/themes/collaboratorium-theme/docroot/_diffs/css/moth_additional_styles.css
@@ -513,3 +513,7 @@ body .resources , .resources h2, .resources { font-family:"gloriola-web-2", Verd
 .journal-content-article ul li {
     list-style: disc inside none;
 }
+
+#pro-info .butt_wrap .buttbdr {
+    margin-right: 8px;
+}
